# hello-rustweek

./: CLAUDE.md  Cargo.toml  Embed.toml  debug.sh  openocd-server.sh  openocd.gdb  probe-rs-dap-server.sh  probe-rs-server.sh
.cargo/: config.toml
.zed/: debug.json  settings.json
