[package]
edition      = "2024"
name         = "hello-rustweek"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "hello-rustweek"
path = "./src/bin/main.rs"

[dependencies]
esp-hal             = { version = "~1.1.0", features = ["esp32s3", "unstable"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }
esp-alloc           = { version = "0.10.0", features = ["esp32s3"] }
esp-radio           = { version = "0.18.0", features = ["esp32s3", "wifi", "unstable"] }
esp-rtos            = { version = "0.3.0",  features = ["esp32s3", "esp-radio", "embassy", "esp-alloc"] }
embassy-executor    = { version = "0.10.0" }
embassy-time        = { version = "0.5.0" }
embedded-graphics   = { version = "0.8" }
heapless            = { version = "0.8" }
qrcode              = { git = "https://github.com/kennytm/qrcode-rust.git", rev = "c7780e8549ac4fb3da81fdf7d7f010a27db78c0f", version = "0.14.1", default-features = false }
defmt               = "0.3"
defmt-rtt           = "0.4"

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
